--- a/mindfulness.html
+++ b/mindfulness.html
@@ -121,6 +121,7 @@
     <h2>Stay Updated</h2>
     <p>Get our latest recipes, workout tips, and mindfulness guides delivered to your inbox.</p>
     <div class="subscribe-box">
+        <label for="email"></label>
         <input type="email" class="subscribe-input" placeholder="Enter your email">
         <button class="subscribe-button">Subscribe</button>
     </div>
