--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>greenBite - Home</title>
-  <link rel="stylesheet" href="./css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>greenBite - Home</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" type="image/png" href="./favicon-3/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="./favicon-3/favicon.svg" />
+    <link rel="shortcut icon" href="./favicon-3/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon-3/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="greenBite" />
+    <link rel="manifest" href="./favicon-3/site.webmanifest" />
 </head>
 <body>
 
@@ -90,7 +96,6 @@
     <h2>Stay Updated</h2>
     <p>Get our latest recipes, workout tips, and mindfulness guides delivered to your inbox.</p>
     <div class="subscribe-box">
-        <label for="email"></label>
         <input type="email" class="subscribe-input" placeholder="Enter your email">
         <button class="subscribe-button">Subscribe</button>
     </div>
