--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>greenBite - Home</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <title>Recipes page</title>
+    <link rel="stylesheet" href="./css/recipes.css">
     <link rel="icon" type="image/png" href="./favicon-3/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="./favicon-3/favicon.svg" />
     <link rel="shortcut icon" href="./favicon-3/favicon.ico" />
