--- a/mindfulness.html
+++ b/mindfulness.html
@@ -20,6 +20,11 @@
             <img src="./images/greenBite_logo.jpeg" alt="GreenBite Logo">
             <span>greenBite</span>
         </div>
+        <button class="hamburger" aria-label="Toggle navigation">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
         <ul class="nav-links">
             <li><a href="index.html"><b>Home</b></a></li>
             <li><a href="recipes.html"><b>Recipes</b></a></li>
